[build-system]
requires = ["setuptools >= 58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Torch SIDU"
description = "Pytorch Implementation of SIDU"
readme = "README.md"
version = "1.0.0"
authors = [
    { name = "Miquel Miró Nicolau", email = "miquel.miro@uib.cat"},
    { name = "Gabriel Moyà Alcover", email = "gabriel_moya@uib.cat"},
    { name = "Antoni Jaume i Capó", email= "antoni.jaume@uib.cat"}
]
keywords = ["experiments", "machine learning"]
dependencies = [
    'numpy',
    'torch'
]

requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/miquelmn/uib_experiments"